# ANGLE.Static

./: .gitignore  BUILD.gn  README.md  args.gn
.github/actions/deploy/: action.yml
.github/actions/setup/: action.yml
.github/workflows/: build.yml
nuget/: ANGLE.Static.csproj
nuget/buildTransitive/: 2ndLAB.ANGLE.Static.targets
patch/: chromium-7151-deps.patch  chromium-7151.patch
